@@ -17,7 +17,12 @@ PyObject *PyObject_FromNOTIFICATION(NOTIFICATION *n)
 	switch (n->ulEventType) {
 		case fnevCriticalError: {
 			ERROR_NOTIFICATION &err = n->info.err;
-			ret = Py_BuildValue("k(s#iiN)",
+			ret = Py_BuildValue(
+#if PY_MAJOR_VERSION >= 3
+						"k(y#iiN)",
+#else
+						"k(s#iiN)",
+#endif
 					    n->ulEventType,
 					    err.lpEntryID, err.cbEntryID,
 					    err.scode,
@@ -27,7 +32,13 @@ PyObject *PyObject_FromNOTIFICATION(NOTIFICATION *n)
 		}
 		case fnevExtended: {
 			EXTENDED_NOTIFICATION &ext = n->info.ext;
-			ret = Py_BuildValue("k(ks#)", n->ulEventType, ext.ulEvent,
+			ret = Py_BuildValue(
+#if PY_MAJOR_VERSION >= 3
+						"k(ky#)",
+#else
+						"k(ks#)",
+#endif
+						n->ulEventType, ext.ulEvent,
 					    ext.pbEventParameters, ext.cb);
 			break;
 		}
@@ -38,7 +49,12 @@ PyObject *PyObject_FromNOTIFICATION(NOTIFICATION *n)
 					PyString_FromString((const char *)newmail.lpszMessageClass);
 			if (!msg_class)
 				return NULL;
-			ret = Py_BuildValue("k(s#s#kNk)",
+			ret = Py_BuildValue(
+#if PY_MAJOR_VERSION >= 3
+						"k(y#y#kNk)",
+#else
+						"k(s#s#kNk)",
+#endif
 					    n->ulEventType,
 					    newmail.lpEntryID, newmail.cbEntryID,
 					    newmail.lpParentID, newmail.cbParentID,
@@ -57,7 +73,12 @@ PyObject *PyObject_FromNOTIFICATION(NOTIFICATION *n)
 			PyObject *obArray = PyMAPIObject_FromSPropTagArray(obj.lpPropTagArray);
 			if (!obArray)
 				return NULL;
-			ret = Py_BuildValue("k(s#is#s#s#N)",
+			ret = Py_BuildValue(
+#if PY_MAJOR_VERSION >= 3
+						"k(y#iy#y#y#N)",
+#else
+						"k(s#is#s#s#N)",
+#endif
 					    n->ulEventType,
 					    obj.lpEntryID, obj.cbEntryID,
 					    obj.ulObjType,
@@ -80,7 +101,12 @@ PyObject *PyObject_FromNOTIFICATION(NOTIFICATION *n)
 		}
 		case fnevStatusObjectModified: {
 			STATUS_OBJECT_NOTIFICATION &statobj = n->info.statobj;
-			ret = Py_BuildValue("k(s#N)",
+			ret = Py_BuildValue(
+#if PY_MAJOR_VERSION >= 3
+						"k(y#N)",
+#else
+						"k(s#N)",
+#endif
 					    n->ulEventType,
 					    statobj.lpEntryID, statobj.cbEntryID,
 					    PyMAPIObject_FromSPropValueArray(statobj.lpPropVals, statobj.cValues));
@@ -111,4 +137,108 @@ ULONG PyGMAPIAdviseSink::OnNotify(ULONG cNotif,  LPNOTIFICATION lpNotifications 
 		PyList_SET_ITEM(arg, i, sub);
 	}
 	return InvokeViaPolicy("OnNotify", NULL, "(N)", arg);
+}
+
+PyIMAPIAdviseSink::PyIMAPIAdviseSink(IUnknown *pDisp) :
+	PyIUnknown(pDisp)
+{
+	ob_type = &type;
+}
+
+PyIMAPIAdviseSink::~PyIMAPIAdviseSink()
+{
+}
+
+/*static*/ IMAPIAdviseSink *PyIMAPIAdviseSink::GetI(PyObject *self)
+{
+	return (IMAPIAdviseSink *)PyIUnknown::GetI(self);
+}
+
+static PyMethodDef IMAPIAdviseSinkMethods[] = {
+	 { NULL, NULL }
+};
+
+PyComTypeObject PyIMAPIAdviseSink::type("PyIMAPIAdviseSink", &PyIUnknown::type,
+	sizeof(PyIMAPIAdviseSink), IMAPIAdviseSinkMethods, GET_PYCOM_CTOR(PyIMAPIAdviseSink));
+
+PyCMAPIAdviseSink::PyCMAPIAdviseSink(PyObject *callback, PyObject *context)
+{
+	m_cRef = 1;
+	Py_INCREF(callback);
+	m_callback = callback;
+	Py_INCREF(context);
+	m_context = context;
+}
+
+PyCMAPIAdviseSink::~PyCMAPIAdviseSink()
+{
+	Py_DECREF(m_callback);
+	Py_DECREF(m_context);
+}
+
+STDMETHODIMP PyCMAPIAdviseSink::QueryInterface(REFIID riid, LPVOID * ppvObj)
+{
+	*ppvObj = 0;
+	if (riid == IID_IMAPIAdviseSink ||
+		riid == IID_IUnknown)
+	{
+		*ppvObj = (LPVOID)this;
+		AddRef();
+		return S_OK;
+	}
+	return E_NOINTERFACE;
+}
+
+STDMETHODIMP_(ULONG) PyCMAPIAdviseSink::AddRef()
+{
+	LONG lCount = InterlockedIncrement(&m_cRef);
+	return lCount;
+}
+
+STDMETHODIMP_(ULONG) PyCMAPIAdviseSink::Release()
+{
+	LONG lCount = InterlockedDecrement(&m_cRef);
+	if (!lCount)  delete this;
+	return lCount;
+}
+
+ULONG PyCMAPIAdviseSink::OnNotify(ULONG cNotif, LPNOTIFICATION lpNotifications)
+{
+	PY_GATEWAY_METHOD;
+
+	PyObject *arg = PyTuple_New(cNotif);
+	if (!arg)
+	{
+		PyCom_LoggerException(NULL, "File %s:Line %d:%s:PyTuple_New() failed.", __FILE__, __LINE__,__FUNCSIG__);
+		PyErr_Clear();
+		return 0;
+	}
+	for (ULONG i=0;i<cNotif;i++) {
+		PyObject *sub = PyObject_FromNOTIFICATION(lpNotifications+i);
+		if (!sub) {
+			Py_DECREF(arg);
+			PyCom_LoggerException(NULL, "File %s:Line %d:%s:PyObject_FromNOTIFICATION failed.", __FILE__, __LINE__, __FUNCSIG__);
+			PyErr_Clear();
+			return 0;
+		}
+		PyTuple_SET_ITEM(arg, i, sub);
+	}
+	PyObject *args = Py_BuildValue("NO", arg, m_context);
+	if (!args)
+	{
+		PyCom_LoggerException(NULL, "File %s:Line %d:%s:Py_BuildValue() failed.", __FILE__, __LINE__, __FUNCSIG__);
+		PyErr_Clear();
+		return 0;
+	}
+
+	PyObject *result = PyObject_CallObject(m_callback, args);
+	Py_DECREF(args);
+	if (!result)
+	{
+		PyCom_LoggerException(NULL, "File %s:Line %d:%s:PyObject_CallObject failed.", __FILE__, __LINE__, __FUNCSIG__);
+		PyErr_Clear();
+		return 0;
+	}
+	Py_DECREF(result);
+	return 0;
 }
